# aoc2024

./: .env.dist  LICENSE  README.md  pyproject.toml
days/day01/: main.py
days/day02/: main.py
days/day03/: main.py
days/day04/: main.py
days/day05/: main.py
